bg color change in landing page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </nav>
 
     <div class="container content">    
+        <div class="jumbotron">
         <div class="row">
             <div class="col-md-8">
                 
@@ -95,5 +96,6 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </body>
